Fixed button padding on create and delete forms. Made buttons on view all aling vertically when on smaller screen.

--- a/Frontend/src/app/pages/delete-emp/delete-emp.component.css
+++ b/Frontend/src/app/pages/delete-emp/delete-emp.component.css
@@ -23,11 +23,6 @@ h4{
     text-align: center;
 }
 
-.btn-actions{
-    display: block;
-    text-align: center;
-}
-
 .cancel-btn {
     background: var(--light-blue);
     color: var(--light);
